# suy-sideguy

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_2.md  CONTRIBUTING.md  LICENSE  PUBLISH_CHECKLIST.md  README.md  RELEASE_REVIEW.md  SECURITY.md  llms.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: AUDIT_CHECKLIST.md  CHANGELOG.md  IMPLEMENTATION_PLAN_LAYERED.md  SUYSIDEGUY_AUDIT_48H_2026-03-01.json
docs/internal/: CODE_REVIEW_2.md  README_READABILITY_REVIEW.md  RELEASE_REVIEW.md
examples/: scope.openclaw.yaml
suy_sideguy/: __init__.py  cli.py  enforcement.py  forensic_report.py  intent_match.py  models.py  observer.py  policy.py  scope.py  warden.py
tests/: test_forensic_report.py  test_new_features.py  test_safety_behaviors.py  test_scope.py
