[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suy-sideguy"
version = "0.1.3"
description = "Runtime safety guard for autonomous AI agents. By Hermes Labs."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{ name = "Hermes Labs", email = "roli@hermes-labs.ai" }]
keywords = ["security", "ai-agent", "runtime-monitoring", "incident-response"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "psutil>=5.9",
  "PyYAML>=6.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[project.scripts]
suy-warden = "suy_sideguy.warden:entrypoint"
suy-forensic-report = "suy_sideguy.forensic_report:main"

[project.urls]
Homepage = "https://hermes-labs.ai"
Repository = "https://github.com/roli-lpci/suy-sideguy"
Documentation = "https://github.com/roli-lpci/suy-sideguy#readme"
Issues = "https://github.com/roli-lpci/suy-sideguy/issues"
Changelog = "https://github.com/roli-lpci/suy-sideguy/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["suy_sideguy"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
files = ["suy_sideguy"]
ignore_missing_imports = true
warn_unused_ignores = true
